<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_first_fuel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tvFirstFuel"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstFuel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fuel" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSecondFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_second_fuel"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tvSecondFuel"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondFuel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecondFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fuel" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btListFirstConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btListSecondConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/tvFirstValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_first_value"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tvFirstValue"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstValue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_value" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSecondValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_second_value"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tvSecondValue"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondValue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_value" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <Button
        android:id="@+id/btClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/clean"
        app:layout_constraintEnd_toEndOf="@+id/btCalculate"
        app:layout_constraintStart_toStartOf="@+id/btCalculate"
        app:layout_constraintTop_toBottomOf="@+id/btCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>